[package]
name = "yobara"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
candle-core = "0.3.2"
candle-nn = "0.3.2"
candle-transformers = "0.3.2"
clap = "4.4.11"
log = "0.4.20"
log4rs = "1.2.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokenizers = "0.15.0"

[[bin]]
name = "mistral"

[[bin]]
name = "solar"
